--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "moment": "^2.29.1",
-    "next": "^11.1.2",
-    "react": "17.0.2",
+    "next": "^11.1.4",
+    "react": "^17.0.2",
+    "react-card-flip": "^1.1.5",
     "react-countdown": "^2.3.2",
     "react-countdown-circle-timer": "^3.0.9",
     "react-date-countdown-timer": "^1.1.0",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
