--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.7.0",
+    "bootstrap": "^5.1.3",
     "moment": "^2.29.1",
     "next": "^11.1.4",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.1",
     "react-card-flip": "^1.1.5",
     "react-countdown": "^2.3.2",
     "react-countdown-circle-timer": "^3.0.9",
