--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "moment": "^2.29.1",
     "next": "^11.1.4",
+    "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-card-flip": "^1.1.5",
