--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--openssl-legacy-provider' next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "lint": "next lint"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.7.0",
     "bootstrap": "^5.1.3",
+    "cross-env": "^7.0.3",
     "moment": "^2.29.1",
     "next": "^11.1.4",
     "nprogress": "^0.2.0",
@@ -21,7 +22,8 @@
     "react-countdown-circle-timer": "^3.0.9",
     "react-date-countdown-timer": "^1.1.0",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
