--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_OPTIONS='--openssl-legacy-provider' next dev",
-    "build": "react-scripts build",
+    "build": "cross-env NODE_OPTIONS='--openssl-legacy-provider' next build",
     "predeploy": "npm run build",
     "deploy": "vk-miniapps-deploy",
     "start": "react-scripts --openssl-legacy-provider start",
@@ -15,6 +15,7 @@
     "bootstrap": "^5.1.3",
     "cross-env": "^7.0.3",
     "moment": "^2.29.1",
+    "netlify-cli": "^13.1.6",
     "next": "^11.1.4",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
